# DjangoReactBlog

./: .gitignore  LICENSE  docker-compose.yml
DjangoTrain/: Dockerfile  pyproject.toml
DjangoTrain/Blog/: consumers.py  models.py  serializers.py  urls.py  views.py
DjangoTrain/Blog/migrations/: 0001_initial.py  0002_comment_in_reply_to.py
DjangoTrain/DjangoTrain/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
blog-frontend/: Dockerfile  package-lock.json  package.json
blog-frontend/src/: App.js  Routes.js
blog-frontend/src/components/: BlogPost.js  Comment.js  CommentForm.js  LoginForm.js  Navbar.js  PostForm.js  PostsList.js  UserBlogList.js  UserRegisterForm.js
blog-frontend/src/hocs/: withAuth.js
blog-frontend/src/pages/: BlogPage.js  BlogPostPage.js  HomePage.js  UserBlogListPage.js  UserLoginPage.js  UserRegisterPage.js
blog-frontend/src/shared/: commentReducer.js
blog-frontend/src/utils/: AuthProvider.js  dates.js  useAuth.js
